# riffshare

./: 2d69  README.md  ValueTree.js  _files.list  axelf.mid  chordsarticle.html  edit.html  edit2d.html  examples.html  files.list  fur_elise_3.mid  index - Copy.html  index.html  justariff.mid  man_on_the_silver_mountain.mid  parse.html  probe.html  states.txt  testmxml.html  testmxml.js  testsamples.html  tools.html  venus.mid  ya_mama_push_the_tempo.mid
2d/: Twinkle Twinkle Little Star-Drums.xml  ValueTree.js  action.js  detailshuge.js  detailslarge.js  detailsmedium.js  detailssmall.js  drum1.html  file.html  fontprobe.html  index.html  input.js  layout.js  localstore.js  mxml.html  mxml.js  oswald.css  riffshare2d.js  song.html  song.js  song10.html  song10.js  song11.html  song11.js  song2.html  song2.js  song3.html  song3.js  song4.html  song4.js  song5.html  song5.js  song6.html  song6.js  song7.html  song7.js  song8.html  song8.js  song9.html  song9.js  (+9 more)
css/: riffShare.css
flat/: 0000_Chaos_sf2_file.js  0170_JCLive_sf2_file.js  0250_Chaos_sf2_file.js  0280_LesPaul_sf2_file.js  0300_LesPaul_sf2_file.js  0330_SoundBlasterOld_sf2.js  0390_GeneralUserGS_sf2_file.js  0480_Aspirin_sf2_file.js  12835_0_Chaos_sf2_file.js  12838_22_FluidR3_GM_sf2_file.js  set.js  (+18 more)
wrapper/vst/vstsamples/helloworld/: CMakeLists.txt
wrapper/vst/vstsamples/helloworld/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
wrapper/vst/vstsamples/helloworld/resource/: Info.plist
wrapper/vst/vstsamples/helloworld/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
(+299 files in other folders)
